test/mutation_analysis/s0551_student_attendance_record_i/hafis/starchat/mutants/19/result.txt
./test/mutation_analysis/s0551_student_attendance_record_i/hafis/starchat/mutants/19/Solution.java:25: error: unreachable statement
                while (false) {
                              ^
1 error
